Fix issues sonarqube cobertura codigo